src/test/ui/borrowck/borrowck-assign-to-constants.stderr
error[E0594]: cannot assign to immutable static item `foo`
  --> $DIR/borrowck-assign-to-constants.rs:5:5
   |
LL |     foo = 6;
   |     ^^^^^^^ cannot assign

error: aborting due to previous error

